# JobApplicationScraper

./: .gitignore  Dockerfile  README.md  config.ini  config.py  driver.py  environment.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
conda_recipe/: meta.yaml
data/test/: selenium_test_page.html
src/: constants.py  exceptions.py  facade.py  logger.py
src/constants/: __init__.py  constants.py  indeed.py  linkedin.py
src/linkedin/: exceptions.py  facade.py
src/login/: __init__.py  login.py
src/models/: __init__.py  job.py
src/search/: __init__.py  job_extractor.py  search.py
src/search/indeed/: job_extractor.py  search.py
src/search/linkedin/: job_extractor.py  search.py
src/utils/: description_matcher.py
tests/: conftest.py  test_description_matcher.py  test_facade.py  test_job.py  test_job_extractor.py  test_login.py  test_search.py
